Addressed comments
changed spacing to four

renamed roots0

changed empty list creation